Setlan/Entrega2_Parser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM statement
Rule 2     statement -> IDENTIFIER ASSIGN expression
Rule 3     statement -> LCURLY declare statement_list RCURLY
Rule 4     statement -> SCAN IDENTIFIER
Rule 5     statement -> PRINT comma_list
Rule 6     statement -> PRINTLN comma_list
Rule 7     statement -> IF LPARENT expression RPARENT statement ELSE statement
Rule 8     statement -> IF LPARENT expression RPARENT statement
Rule 9     statement -> FOR IDENTIFIER direction expression DO statement
Rule 10    direction -> MIN
Rule 11    direction -> MAX
Rule 12    statement -> REPEAT statement WHILE LPARENT expression RPARENT DO statement
Rule 13    statement -> WHILE LPARENT expression RPARENT DO statement
Rule 14    statement -> REPEAT statement WHILE LPARENT expression RPARENT
Rule 15    declare -> USING declare_list IN
Rule 16    declare -> empty
Rule 17    declare_list -> type identifier_list SEMICOLON declare_list
Rule 18    declare_list -> empty
Rule 19    identifier_list -> IDENTIFIER
Rule 20    identifier_list -> IDENTIFIER COMMA identifier_list
Rule 21    statement_list -> statement SEMICOLON statement_list
Rule 22    statement_list -> empty
Rule 23    expression -> INTEGER
Rule 24    expression -> FALSE
Rule 25    expression -> TRUE
Rule 26    expression -> STRING
Rule 27    expression -> IDENTIFIER
Rule 28    expression -> LPARENT expression RPARENT
Rule 29    type -> INT
Rule 30    type -> BOOL
Rule 31    type -> SET
Rule 32    expression -> LCURLY set_list RCURLY
Rule 33    set_list -> comma_list
Rule 34    set_list -> empty
Rule 35    comma_list -> expression
Rule 36    comma_list -> expression COMMA comma_list
Rule 37    expression -> expression PLUS expression
Rule 38    expression -> expression MINUS expression
Rule 39    expression -> expression TIMES expression
Rule 40    expression -> expression INTDIVISION expression
Rule 41    expression -> expression RESTDIVISION expression
Rule 42    expression -> expression EQUALBOOL expression
Rule 43    expression -> expression UNEQUAL expression
Rule 44    expression -> expression LESSTHAN expression
Rule 45    expression -> expression LESSOREQUALTHAN expression
Rule 46    expression -> expression GREATERTHAN expression
Rule 47    expression -> expression GREATEROREQUALTHAN expression
Rule 48    expression -> expression BELONG expression
Rule 49    expression -> expression AND expression
Rule 50    expression -> expression OR expression
Rule 51    expression -> expression DOUBLEPLUS expression
Rule 52    expression -> expression COUNTERSLASH expression
Rule 53    expression -> expression INTERSECCION expression
Rule 54    expression -> expression MAPPLUS expression
Rule 55    expression -> expression MAPMINUS expression
Rule 56    expression -> expression MAPTIMES expression
Rule 57    expression -> expression MAPDIVIDE expression
Rule 58    expression -> expression MAPREST expression
Rule 59    expression -> MINUS expression
Rule 60    expression -> NOT expression
Rule 61    expression -> MAXVALUESET expression
Rule 62    expression -> MINVALUESET expression
Rule 63    expression -> SIZESET expression
Rule 64    empty -> <empty>

Terminals, with rules where they appear

AND                  : 49
ASSIGN               : 2
BELONG               : 48
BOOL                 : 30
COMMA                : 20 36
COUNTERSLASH         : 52
DO                   : 9 12 13
DOUBLEPLUS           : 51
ELSE                 : 7
EQUALBOOL            : 42
FALSE                : 24
FOR                  : 9
GREATEROREQUALTHAN   : 47
GREATERTHAN          : 46
IDENTIFIER           : 2 4 9 19 20 27
IF                   : 7 8
IN                   : 15
INT                  : 29
INTDIVISION          : 40
INTEGER              : 23
INTERSECCION         : 53
LCURLY               : 3 32
LESSOREQUALTHAN      : 45
LESSTHAN             : 44
LPARENT              : 7 8 12 13 14 28
MAPDIVIDE            : 57
MAPMINUS             : 55
MAPPLUS              : 54
MAPREST              : 58
MAPTIMES             : 56
MAX                  : 11
MAXVALUESET          : 61
MIN                  : 10
MINUS                : 38 59
MINVALUESET          : 62
NOT                  : 60
OR                   : 50
PLUS                 : 37
PRINT                : 5
PRINTLN              : 6
PROGRAM              : 1
RCURLY               : 3 32
REPEAT               : 12 14
RESTDIVISION         : 41
RPARENT              : 7 8 12 13 14 28
SCAN                 : 4
SEMICOLON            : 17 21
SET                  : 31
SIZESET              : 63
STRING               : 26
TIMES                : 39
TRUE                 : 25
UNEQUAL              : 43
USING                : 15
WHILE                : 12 13 14
error                : 

Nonterminals, with rules where they appear

comma_list           : 5 6 33 36
declare              : 3
declare_list         : 15 17
direction            : 9
empty                : 16 18 22 34
expression           : 2 7 8 9 12 13 14 28 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61 62 63
identifier_list      : 17 20
program              : 0
set_list             : 32
statement            : 1 7 7 8 9 12 12 13 14 21
statement_list       : 3 21
type                 : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM statement

    PROGRAM         shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> PROGRAM . statement
    (2) statement -> . IDENTIFIER ASSIGN expression
    (3) statement -> . LCURLY declare statement_list RCURLY
    (4) statement -> . SCAN IDENTIFIER
    (5) statement -> . PRINT comma_list
    (6) statement -> . PRINTLN comma_list
    (7) statement -> . IF LPARENT expression RPARENT statement ELSE statement
    (8) statement -> . IF LPARENT expression RPARENT statement
    (9) statement -> . FOR IDENTIFIER direction expression DO statement
    (12) statement -> . REPEAT statement WHILE LPARENT expression RPARENT DO statement
    (13) statement -> . WHILE LPARENT expression RPARENT DO statement
    (14) statement -> . REPEAT statement WHILE LPARENT expression RPARENT

    IDENTIFIER      shift and go to state 9
    LCURLY          shift and go to state 4
    SCAN            shift and go to state 3
    PRINT           shift and go to state 6
    PRINTLN         shift and go to state 8
    IF              shift and go to state 12
    FOR             shift and go to state 11
    REPEAT          shift and go to state 10
    WHILE           shift and go to state 5

    statement                      shift and go to state 7

state 2

    (0) S' -> program .



state 3

    (4) statement -> SCAN . IDENTIFIER

    IDENTIFIER      shift and go to state 13


state 4

    (3) statement -> LCURLY . declare statement_list RCURLY
    (15) declare -> . USING declare_list IN
    (16) declare -> . empty
    (64) empty -> .

    USING           shift and go to state 14
    IDENTIFIER      reduce using rule 64 (empty -> .)
    LCURLY          reduce using rule 64 (empty -> .)
    SCAN            reduce using rule 64 (empty -> .)
    PRINT           reduce using rule 64 (empty -> .)
    PRINTLN         reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    FOR             reduce using rule 64 (empty -> .)
    REPEAT          reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    RCURLY          reduce using rule 64 (empty -> .)

    declare                        shift and go to state 15
    empty                          shift and go to state 16

state 5

    (13) statement -> WHILE . LPARENT expression RPARENT DO statement

    LPARENT         shift and go to state 17


state 6

    (5) statement -> PRINT . comma_list
    (35) comma_list -> . expression
    (36) comma_list -> . expression COMMA comma_list
    (23) expression -> . INTEGER
    (24) expression -> . FALSE
    (25) expression -> . TRUE
    (26) expression -> . STRING
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPARENT expression RPARENT
    (32) expression -> . LCURLY set_list RCURLY
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression INTDIVISION expression
    (41) expression -> . expression RESTDIVISION expression
    (42) expression -> . expression EQUALBOOL expression
    (43) expression -> . expression UNEQUAL expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression LESSOREQUALTHAN expression
    (46) expression -> . expression GREATERTHAN expression
    (47) expression -> . expression GREATEROREQUALTHAN expression
    (48) expression -> . expression BELONG expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression DOUBLEPLUS expression
    (52) expression -> . expression COUNTERSLASH expression
    (53) expression -> . expression INTERSECCION expression
    (54) expression -> . expression MAPPLUS expression
    (55) expression -> . expression MAPMINUS expression
    (56) expression -> . expression MAPTIMES expression
    (57) expression -> . expression MAPDIVIDE expression
    (58) expression -> . expression MAPREST expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . MAXVALUESET expression
    (62) expression -> . MINVALUESET expression
    (63) expression -> . SIZESET expression

    INTEGER         shift and go to state 27
    FALSE           shift and go to state 29
    TRUE            shift and go to state 20
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 24
    LPARENT         shift and go to state 22
    LCURLY          shift and go to state 19
    MINUS           shift and go to state 21
    NOT             shift and go to state 30
    MAXVALUESET     shift and go to state 18
    MINVALUESET     shift and go to state 23
    SIZESET         shift and go to state 28

    expression                     shift and go to state 31
    comma_list                     shift and go to state 25

state 7

    (1) program -> PROGRAM statement .

    $end            reduce using rule 1 (program -> PROGRAM statement .)


state 8

    (6) statement -> PRINTLN . comma_list
    (35) comma_list -> . expression
    (36) comma_list -> . expression COMMA comma_list
    (23) expression -> . INTEGER
    (24) expression -> . FALSE
    (25) expression -> . TRUE
    (26) expression -> . STRING
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPARENT expression RPARENT
    (32) expression -> . LCURLY set_list RCURLY
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression INTDIVISION expression
    (41) expression -> . expression RESTDIVISION expression
    (42) expression -> . expression EQUALBOOL expression
    (43) expression -> . expression UNEQUAL expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression LESSOREQUALTHAN expression
    (46) expression -> . expression GREATERTHAN expression
    (47) expression -> . expression GREATEROREQUALTHAN expression
    (48) expression -> . expression BELONG expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression DOUBLEPLUS expression
    (52) expression -> . expression COUNTERSLASH expression
    (53) expression -> . expression INTERSECCION expression
    (54) expression -> . expression MAPPLUS expression
    (55) expression -> . expression MAPMINUS expression
    (56) expression -> . expression MAPTIMES expression
    (57) expression -> . expression MAPDIVIDE expression
    (58) expression -> . expression MAPREST expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . MAXVALUESET expression
    (62) expression -> . MINVALUESET expression
    (63) expression -> . SIZESET expression

    INTEGER         shift and go to state 27
    FALSE           shift and go to state 29
    TRUE            shift and go to state 20
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 24
    LPARENT         shift and go to state 22
    LCURLY          shift and go to state 19
    MINUS           shift and go to state 21
    NOT             shift and go to state 30
    MAXVALUESET     shift and go to state 18
    MINVALUESET     shift and go to state 23
    SIZESET         shift and go to state 28

    expression                     shift and go to state 31
    comma_list                     shift and go to state 32

state 9

    (2) statement -> IDENTIFIER . ASSIGN expression

    ASSIGN          shift and go to state 33


state 10

    (12) statement -> REPEAT . statement WHILE LPARENT expression RPARENT DO statement
    (14) statement -> REPEAT . statement WHILE LPARENT expression RPARENT
    (2) statement -> . IDENTIFIER ASSIGN expression
    (3) statement -> . LCURLY declare statement_list RCURLY
    (4) statement -> . SCAN IDENTIFIER
    (5) statement -> . PRINT comma_list
    (6) statement -> . PRINTLN comma_list
    (7) statement -> . IF LPARENT expression RPARENT statement ELSE statement
    (8) statement -> . IF LPARENT expression RPARENT statement
    (9) statement -> . FOR IDENTIFIER direction expression DO statement
    (12) statement -> . REPEAT statement WHILE LPARENT expression RPARENT DO statement
    (13) statement -> . WHILE LPARENT expression RPARENT DO statement
    (14) statement -> . REPEAT statement WHILE LPARENT expression RPARENT

    IDENTIFIER      shift and go to state 9
    LCURLY          shift and go to state 4
    SCAN            shift and go to state 3
    PRINT           shift and go to state 6
    PRINTLN         shift and go to state 8
    IF              shift and go to state 12
    FOR             shift and go to state 11
    REPEAT          shift and go to state 10
    WHILE           shift and go to state 5

    statement                      shift and go to state 34

state 11

    (9) statement -> FOR . IDENTIFIER direction expression DO statement

    IDENTIFIER      shift and go to state 35


state 12

    (7) statement -> IF . LPARENT expression RPARENT statement ELSE statement
    (8) statement -> IF . LPARENT expression RPARENT statement

    LPARENT         shift and go to state 36


state 13

    (4) statement -> SCAN IDENTIFIER .

    ELSE            reduce using rule 4 (statement -> SCAN IDENTIFIER .)
    $end            reduce using rule 4 (statement -> SCAN IDENTIFIER .)
    WHILE           reduce using rule 4 (statement -> SCAN IDENTIFIER .)
    SEMICOLON       reduce using rule 4 (statement -> SCAN IDENTIFIER .)


state 14

    (15) declare -> USING . declare_list IN
    (17) declare_list -> . type identifier_list SEMICOLON declare_list
    (18) declare_list -> . empty
    (29) type -> . INT
    (30) type -> . BOOL
    (31) type -> . SET
    (64) empty -> .

    INT             shift and go to state 38
    BOOL            shift and go to state 39
    SET             shift and go to state 37
    IN              reduce using rule 64 (empty -> .)

    type                           shift and go to state 41
    declare_list                   shift and go to state 40
    empty                          shift and go to state 42

state 15

    (3) statement -> LCURLY declare . statement_list RCURLY
    (21) statement_list -> . statement SEMICOLON statement_list
    (22) statement_list -> . empty
    (2) statement -> . IDENTIFIER ASSIGN expression
    (3) statement -> . LCURLY declare statement_list RCURLY
    (4) statement -> . SCAN IDENTIFIER
    (5) statement -> . PRINT comma_list
    (6) statement -> . PRINTLN comma_list
    (7) statement -> . IF LPARENT expression RPARENT statement ELSE statement
    (8) statement -> . IF LPARENT expression RPARENT statement
    (9) statement -> . FOR IDENTIFIER direction expression DO statement
    (12) statement -> . REPEAT statement WHILE LPARENT expression RPARENT DO statement
    (13) statement -> . WHILE LPARENT expression RPARENT DO statement
    (14) statement -> . REPEAT statement WHILE LPARENT expression RPARENT
    (64) empty -> .

    IDENTIFIER      shift and go to state 9
    LCURLY          shift and go to state 4
    SCAN            shift and go to state 3
    PRINT           shift and go to state 6
    PRINTLN         shift and go to state 8
    IF              shift and go to state 12
    FOR             shift and go to state 11
    REPEAT          shift and go to state 10
    WHILE           shift and go to state 5
    RCURLY          reduce using rule 64 (empty -> .)

    empty                          shift and go to state 44
    statement                      shift and go to state 43
    statement_list                 shift and go to state 45

state 16

    (16) declare -> empty .

    IDENTIFIER      reduce using rule 16 (declare -> empty .)
    LCURLY          reduce using rule 16 (declare -> empty .)
    SCAN            reduce using rule 16 (declare -> empty .)
    PRINT           reduce using rule 16 (declare -> empty .)
    PRINTLN         reduce using rule 16 (declare -> empty .)
    IF              reduce using rule 16 (declare -> empty .)
    FOR             reduce using rule 16 (declare -> empty .)
    REPEAT          reduce using rule 16 (declare -> empty .)
    WHILE           reduce using rule 16 (declare -> empty .)
    RCURLY          reduce using rule 16 (declare -> empty .)


state 17

    (13) statement -> WHILE LPARENT . expression RPARENT DO statement
    (23) expression -> . INTEGER
    (24) expression -> . FALSE
    (25) expression -> . TRUE
    (26) expression -> . STRING
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPARENT expression RPARENT
    (32) expression -> . LCURLY set_list RCURLY
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression INTDIVISION expression
    (41) expression -> . expression RESTDIVISION expression
    (42) expression -> . expression EQUALBOOL expression
    (43) expression -> . expression UNEQUAL expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression LESSOREQUALTHAN expression
    (46) expression -> . expression GREATERTHAN expression
    (47) expression -> . expression GREATEROREQUALTHAN expression
    (48) expression -> . expression BELONG expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression DOUBLEPLUS expression
    (52) expression -> . expression COUNTERSLASH expression
    (53) expression -> . expression INTERSECCION expression
    (54) expression -> . expression MAPPLUS expression
    (55) expression -> . expression MAPMINUS expression
    (56) expression -> . expression MAPTIMES expression
    (57) expression -> . expression MAPDIVIDE expression
    (58) expression -> . expression MAPREST expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . MAXVALUESET expression
    (62) expression -> . MINVALUESET expression
    (63) expression -> . SIZESET expression

    INTEGER         shift and go to state 27
    FALSE           shift and go to state 29
    TRUE            shift and go to state 20
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 24
    LPARENT         shift and go to state 22
    LCURLY          shift and go to state 19
    MINUS           shift and go to state 21
    NOT             shift and go to state 30
    MAXVALUESET     shift and go to state 18
    MINVALUESET     shift and go to state 23
    SIZESET         shift and go to state 28

    expression                     shift and go to state 46

state 18

    (61) expression -> MAXVALUESET . expression
    (23) expression -> . INTEGER
    (24) expression -> . FALSE
    (25) expression -> . TRUE
    (26) expression -> . STRING
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPARENT expression RPARENT
    (32) expression -> . LCURLY set_list RCURLY
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression INTDIVISION expression
    (41) expression -> . expression RESTDIVISION expression
    (42) expression -> . expression EQUALBOOL expression
    (43) expression -> . expression UNEQUAL expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression LESSOREQUALTHAN expression
    (46) expression -> . expression GREATERTHAN expression
    (47) expression -> . expression GREATEROREQUALTHAN expression
    (48) expression -> . expression BELONG expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression DOUBLEPLUS expression
    (52) expression -> . expression COUNTERSLASH expression
    (53) expression -> . expression INTERSECCION expression
    (54) expression -> . expression MAPPLUS expression
    (55) expression -> . expression MAPMINUS expression
    (56) expression -> . expression MAPTIMES expression
    (57) expression -> . expression MAPDIVIDE expression
    (58) expression -> . expression MAPREST expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . MAXVALUESET expression
    (62) expression -> . MINVALUESET expression
    (63) expression -> . SIZESET expression

    INTEGER         shift and go to state 27
    FALSE           shift and go to state 29
    TRUE            shift and go to state 20
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 24
    LPARENT         shift and go to state 22
    LCURLY          shift and go to state 19
    MINUS           shift and go to state 21
    NOT             shift and go to state 30
    MAXVALUESET     shift and go to state 18
    MINVALUESET     shift and go to state 23
    SIZESET         shift and go to state 28

    expression                     shift and go to state 47

state 19

    (32) expression -> LCURLY . set_list RCURLY
    (33) set_list -> . comma_list
    (34) set_list -> . empty
    (35) comma_list -> . expression
    (36) comma_list -> . expression COMMA comma_list
    (64) empty -> .
    (23) expression -> . INTEGER
    (24) expression -> . FALSE
    (25) expression -> . TRUE
    (26) expression -> . STRING
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPARENT expression RPARENT
    (32) expression -> . LCURLY set_list RCURLY
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression INTDIVISION expression
    (41) expression -> . expression RESTDIVISION expression
    (42) expression -> . expression EQUALBOOL expression
    (43) expression -> . expression UNEQUAL expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression LESSOREQUALTHAN expression
    (46) expression -> . expression GREATERTHAN expression
    (47) expression -> . expression GREATEROREQUALTHAN expression
    (48) expression -> . expression BELONG expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression DOUBLEPLUS expression
    (52) expression -> . expression COUNTERSLASH expression
    (53) expression -> . expression INTERSECCION expression
    (54) expression -> . expression MAPPLUS expression
    (55) expression -> . expression MAPMINUS expression
    (56) expression -> . expression MAPTIMES expression
    (57) expression -> . expression MAPDIVIDE expression
    (58) expression -> . expression MAPREST expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . MAXVALUESET expression
    (62) expression -> . MINVALUESET expression
    (63) expression -> . SIZESET expression

    RCURLY          reduce using rule 64 (empty -> .)
    INTEGER         shift and go to state 27
    FALSE           shift and go to state 29
    TRUE            shift and go to state 20
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 24
    LPARENT         shift and go to state 22
    LCURLY          shift and go to state 19
    MINUS           shift and go to state 21
    NOT             shift and go to state 30
    MAXVALUESET     shift and go to state 18
    MINVALUESET     shift and go to state 23
    SIZESET         shift and go to state 28

    set_list                       shift and go to state 48
    expression                     shift and go to state 31
    empty                          shift and go to state 50
    comma_list                     shift and go to state 49

state 20

    (25) expression -> TRUE .

    PLUS            reduce using rule 25 (expression -> TRUE .)
    MINUS           reduce using rule 25 (expression -> TRUE .)
    TIMES           reduce using rule 25 (expression -> TRUE .)
    INTDIVISION     reduce using rule 25 (expression -> TRUE .)
    RESTDIVISION    reduce using rule 25 (expression -> TRUE .)
    EQUALBOOL       reduce using rule 25 (expression -> TRUE .)
    UNEQUAL         reduce using rule 25 (expression -> TRUE .)
    LESSTHAN        reduce using rule 25 (expression -> TRUE .)
    LESSOREQUALTHAN reduce using rule 25 (expression -> TRUE .)
    GREATERTHAN     reduce using rule 25 (expression -> TRUE .)
    GREATEROREQUALTHAN reduce using rule 25 (expression -> TRUE .)
    BELONG          reduce using rule 25 (expression -> TRUE .)
    AND             reduce using rule 25 (expression -> TRUE .)
    OR              reduce using rule 25 (expression -> TRUE .)
    DOUBLEPLUS      reduce using rule 25 (expression -> TRUE .)
    COUNTERSLASH    reduce using rule 25 (expression -> TRUE .)
    INTERSECCION    reduce using rule 25 (expression -> TRUE .)
    MAPPLUS         reduce using rule 25 (expression -> TRUE .)
    MAPMINUS        reduce using rule 25 (expression -> TRUE .)
    MAPTIMES        reduce using rule 25 (expression -> TRUE .)
